[gd_scene load_steps=2 format=3 uid="uid://c1lutynlxiwfc"]

[ext_resource type="Script" path="res://Main/Scripts/game_over.gd" id="1_u587r"]

[node name="Game_Over" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_u587r")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.39227, 0.171792, 0.193381, 0.705882)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 400

[node name="VBoxGameOver" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 300

[node name="Label" type="Label" parent="MarginContainer/VBoxGameOver"]
layout_mode = 2
theme_override_font_sizes/font_size = 148
text = "Game Over!"
horizontal_alignment = 1

[node name="VBoxGameOver" type="HBoxContainer" parent="MarginContainer/VBoxGameOver"]
layout_mode = 2
theme_override_constants/separation = 40

[node name="MenuBackButton" type="Button" parent="MarginContainer/VBoxGameOver/VBoxGameOver"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 90
text = "Back To Menu
"

[node name="PlayAgain" type="Button" parent="MarginContainer/VBoxGameOver/VBoxGameOver"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 90
text = "Play Again"
